@@ -1,3 +1,8 @@
+2002-04-29  Shivram U  <shivaram.upadhyayula@wipro.com>
+
+	* src/ui.c, src/converter.c: Fixed problem with disabling and enabling
+	"Get cursor value" button while closing and opening files.	
+
 2002-04-26  Shivram U  <shivaram.upadhyayula@wipro.com>
 
 	* src/ghex-ui.xml: Fixed Help menu as per usability issues mentioned
